2010-02-08  Karl Berry  <karl@gnu.org>

	* tex4ht-unicode.tex: add license notices.
	* Makefile: add derivations.

2010-02-07  Karl Berry  <karl@gnu.org>

	* tex4ht-word.tex: add license notices.
	* Makefile: add derivations.

2010-02-06  Karl Berry  <karl@gnu.org>

	* tex4ht-xhtml-xtpipes.tex: add license notices.
	* Makefile: add derivations.

	* tex4ht-xhtmml-xtpipes.tex,
	* xtpipes.tex: \message when running the lit sources doesn't
	seem useful.  Remove it.

2010-02-05  Karl Berry  <karl@gnu.org>

	* tex4ht-xhtmml-xtpipes.tex: add license notices.
	* Makefile: add derivations.

2010-02-03  Karl Berry  <karl@gnu.org>

	* wripro.tex: add license notice.

2010-02-02  Karl Berry  <karl@gnu.org>

	* xtpipes.tex: add derivation info and copyright messages
	to generated files.
	* tex4ht-cpright.tex: minimize lines.
	* Makefile: start at new file.

This file is public domain.  Started 2010, Karl Berry.