@@ -16,3 +16,9 @@
 % If you modify this program, changing the 
 % version identification would be appreciated.
 >>>
+
+% License text + \write to log file.
+\<TeX4ht copywrite\><<<
+|<TeX4ht copyright|>
+\immediate\write-1{version |version}
+>>>
