@@ -237,9 +237,8 @@ of \verb'\mathop', \verb'\mathrel',...., for the next parameter.
 
 \<unicode\><<<
 % unicode.4ht (|version), generated from |jobname.tex
-% Copyright (C) |CopyYear.1998.       Eitan M. Gurari
-|<TeX4ht copyright|>
-\immediate\write-1{version |version}
+% Copyright (C) |CopyYear.1998. Eitan M. Gurari
+|<TeX4ht copywrite|>
 >>>
 
 
